# Rorven

./: .env.example  .gitignore  AGENTS.md  CODEX_BOOTSTRAP_PROMPT.md  FILES.md  README.md  pyproject.toml
.project/: evolution.yaml  identity.yaml  risks.yaml  roadmap.yaml  state.yaml
.specify/memory/: constitution.md
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts
config/: README.md
config/agents/: coder.example.yaml  orchestrator.example.yaml  reviewer.example.yaml
config/model-profiles/: profiles.example.yaml
docs/architecture/: README.md  agent-capability-roadmap.md  evolution-and-migrations.md  memory.md  model-layer.md  module-boundaries.md  permissions-and-secrets.md  persistence.md  runtime.md  security.md  system-context.md
docs/development/: definition-of-done.md  definition-of-ready.md  review-policy.md  session-handoff.md  testing-strategy.md  workflow.md
docs/operations/: backup-restore.md
docs/product/: PDD.md  identity.md  name-clearance-rorven.md
schemas/: run-event.schema.json
specs/0001-foundation/: plan.md  spec.md  tasks.md  test-plan.md  validation.md
tests/: test_api_integration.py  test_api_settings.py  test_architecture_boundaries.py  test_backend_only_e2e.py  test_composition.py  test_domain_model.py  test_frontend_state_management.py  test_frontend_user_flow.py  test_langgraph_runtime_contract.py  test_local_file_store.py  test_local_runtime_contract.py  test_openrouter_model_gateway.py  test_orchestrator_dispatch.py  test_persistence_e2e.py  test_root_dashboard.py  test_workspace_tools.py
(+109 files in other folders)
